--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root{
     --main-color: #db1e2a;
-    --heavy-red: #e4000f;
+    --heavy-red: #c40613;
     --second-color: #656565;
     --white-color: #c6c4c4;
     --light-gray: #7e7d7d;
@@ -86,7 +86,7 @@ header{
 
 /* Home */
 .home{
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
     background: url(./Assets/background_home.jpeg);
     display: flex;
@@ -122,7 +122,7 @@ header{
     border-radius: 1rem;
 }
 .scroll-down-arrow a:hover{
-    color: var(--white-color);
+    /* color: var(--white-color); */
     background-color: var(--heavy-red);
     
 }
@@ -130,7 +130,7 @@ header{
 
 /* Exercises */
 .exercises{
-    width: 100vw;
+    /* width: 100vw; */
     background: url(./Assets/background_home.jpeg);
     color: #fff;
 }
@@ -182,7 +182,7 @@ header{
 .contact
 {
     color: white;
-    width: 100vw;
+    /* width: 100vw; */
     height: 25vh;
     background: url(./Assets/background_home.jpeg);
 }
@@ -218,6 +218,7 @@ header{
 
 /* Copyright */
 .copyright{
+    /* width: 100vw; */
     display: flex;
     align-items: center;
     justify-content: center;
