--- a/style.css
+++ b/style.css
@@ -101,12 +101,16 @@ header{
     color: var(--main-color);
 }
 .avatar{
+    width: 400px;
+    height: 400px;
     border:0.5rem solid var(--main-color);
     border-radius: 50%;
     overflow: hidden;
-    /* border-image: linear-gradient(to right, #3acfd5 0%, #3a4ed5 100%) 1; */
 }
 .avatar img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transform: scale(1.05);
 }
 .scroll-down-arrow{
